# delta-theta

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.example.toml  pyproject.toml
.github/workflows/: ruff.yml
python/delta_theta/: __init__.py  env.py  train.py
python/delta_theta_matrix/: __init__.py  env.py  live.py  train.py  visualize.py
python/delta_theta_matrix/feeds/: __init__.py  alpaca_feed.py  tradier_feed.py
src/: engine.rs  lib.rs  options.rs  orderbook.rs  risk.rs  state.rs
tests/: test_feeds.py  test_live.py
