[package]
name = "delta_theta_matrix"
version = "0.1.0"
edition = "2021"
description = "Q-Learned Delta-Theta Matrix Integration — high-performance algorithmic trading harness"
license = "MIT"

[lib]
name = "delta_theta_matrix"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
numpy = "0.24"
polars = { version = "0.46", features = ["lazy"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
rand_distr = "0.5"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
