[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "delta-theta-matrix"
version = "0.1.0"
description = "Q-Learned Delta-Theta Matrix Integration — RL-driven options trading harness"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13,<3.14"
dependencies = [
    "gymnasium>=1.1",
    "stable-baselines3[extra]>=2.6",
    "numpy>=2.2",
    "polars>=1.24",
    "plotly>=6.0",
    "torch>=2.6",
    "kaleido>=0.4",
    "pyreqwest-impersonate>=0.5",
]

[dependency-groups]
dev = ["ruff>=0.11"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "delta_theta_matrix._native"
